tyedigital_backend-dev/yaml/DEV/devPhpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tyedigital-phpmyadmin
spec:
  selector:
    matchLabels:
      app: dev-tyedigital-phpmyadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-tyedigital-phpmyadmin
    spec:
      containers:
        - name: dev-tyedigital-phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
              name: phpmyadmin
---
apiVersion: v1
kind: Service
metadata:
  name: dev-tyedigital-phpmyadmin
spec:
  selector:
    app: dev-tyedigital-phpmyadmin
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
