tyedigital_backend-dev/yaml/DEV/devIngressMeatAndMld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyedigital
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - dev.tyedigital.org
    secretName: dev.tyedigital.org-tls
  rules:
  - host: dev.tyedigital.org
    http:
      paths:
        - path: /api/(.*)
          pathType: Prefix
          backend:
            service:
              name: dev-tyedigital-server
              port:
                number: 6060
        - path: /phpmyadmin/(.*)
          pathType: Prefix
          backend:
            service:
              name: dev-tyedigital-phpmyadmin
              port:
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: tyedigital-svc
              port:
                number: 80
